# capstone-mcp-server

./: README.md  README_EN.md  pyproject.toml  requirements.txt
src/capstone_mcp/: __init__.py  binary_parser.py  ctf_utils.py  disassembler.py  security.py  server.py  syscall.py
